@@ -1,7 +1,7 @@
 .\" $Id: pkg_replace.1,v 1.2 2007/01/25 12:25:56 securedog Exp $
 .\"
-.\" Modified by Ken DEGUCHI (December 17, 2022)"
-.Dd December 17, 2022
+.\" Modified by Ken DEGUCHI (December 22, 2022)"
+.Dd December 22, 2022
 .Dt PKG_REPLACE 1
 .Os
 .Sh NAME
@@ -90,7 +90,14 @@ replace all packages that required by those packages as well.
 Strictly checking dependencies more than
 .Fl d, Fl R,
 e.g. build dependencies.
-However, this mode is very slow.
+However, this mode is slow.
+So,
+.Nm
+creates temporary files in the
+.Ar PKG_REPLACE_DB_DIR
+directory to run as fast as possible.
+See config file
+.Ar pkg_replace.conf .
 .Pp
 .It Fl \-debug
 Debug mode.
