@@ -12,7 +12,7 @@
 # PKG_DBDIR="/var/db/pkg"
 # PKG_TMPDIR="/var/tmp"
 # PKGCOMPATDIR="/usr/local/lib/compat/pkg"
-
+#
 # Alternative locations for pkg_install: string
 #
 # PKG_ADD="/usr/sbin/pkg add"
@@ -54,6 +54,12 @@
 # Options that are passed to pkg_replace(1) automatically.
 #
 # PKG_REPLACE="-bv -l /root/pkg_replace.log -L /var/log/pkg/"
+
+# PKG_REPLACE_DB_DIR: string
+#
+# Temporary directory for saving build dependencies of each ports.
+#
+# PKG_REPLACE_DB_DIR="/var/tmp/pkg_replace"
 
 # IGNORE: array
 #
